Update TODO.md and Deployment Guide with comprehensive task completion and streamlined deployment instructions
- Revised the completed tasks in TODO.md to reflect updates in build fixes, example applications, documentation, framework core, and backend implementations.
- Enhanced the Deployment Guide to provide concise instructions for deploying Spring Vision across various environments, including cloud platforms, Docker, and Kubernetes.
- Improved organization and clarity in both documents to facilitate better understanding and usability for developers and users.